syntax = "proto3";

message TagArray {
    repeated TagArray.Type value = 1;
    message Type {
        repeated string items = 1;
        repeated double minItems = 2;
        repeated string both = 3;
    }
}